moved boards directory

--- a/source/targets/sparky2/Makefile
+++ b/source/targets/sparky2/Makefile
@@ -86,13 +86,13 @@ endif
 PROJECT = ChibiFlight_Sparky2
 
 # Imported source files and paths
-CHIBIOS = ChibiOS_3.0.1
+CHIBIOS = ./source/os/ChibiOS_3.0.2
 # Startup files.
 include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
 # HAL-OSAL files (optional).
 include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/hal/ports/STM32/STM32F4xx/platform.mk
-include $(CHIBIOS)/../boards/Sparky2/board.mk
+include ./source/boards/Sparky2/board.mk
 include $(CHIBIOS)/os/hal/osal/rt/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
